--- a/index.html
+++ b/index.html
@@ -725,7 +725,17 @@
             return `
                 <div class="product-card bg-white rounded-2xl shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 group">
                     <div class="relative overflow-hidden">
-                        <img src="${product.image}" alt="${product.name}" 
+     ${product.video ? `
+  <video width="100%" height="auto" controls class="object-cover w-full h-64">
+    <source src="${product.video}" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+` : `
+  <img src="${product.image}" alt="${product.name}"
+       class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300"
+       onerror="this.src='https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600'">
+`}
+`}alt="${product.name}
                              class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300"
                              onerror="this.src='${fallbackImage}'">
                         ${!product.inStock ? '<span class="absolute top-2 left-2 bg-red-500 text-white px-2 py-1 text-xs rounded">Out of Stock</span>' : ''}
